deploy/k8s/frontend-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-service
  namespace: app
  labels:
    app.kubernetes.io/name: frontend-service
    app.kubernetes.io/part-of: bestwo-data-platform
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
